# potv3

./: .env.example  Cargo.toml
src/: colour.rs  helpers.rs  interaction.rs  main.rs  pot.rs  yt.rs
src/interaction/: commands.rs
