[package]
name = "potv3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0.163"
serde_json="1.0.96"
url = "2.3.1"
termion = "2.0.1"
anyhow = "1.0.71"
async-recursion = "1.0.4"
duct = "0.13.6"
os_pipe = "1.1.4"
dotenv = "0.15.0"

futures = "0.3.28"
symphonia = { version = "0.5.2", features = ["aac", "mp3", "isomp4", "alac"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
once_cell = "1.17.2"
async-trait = "0.1.68"

twilight-gateway = {version = "0.15.2"}
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-standby = "0.15.2"
twilight-interactions = "0.15.1"
twilight-util = { version = "0.15.2", features = ["builder"] }
twilight-cache-inmemory = "0.15.2"


[dependencies.reqwest]
version = "0.11.18"
features = ["blocking"]

[dependencies.tokio]
version = "1.28.1"
features = ["macros", "rt-multi-thread", "signal", "sync", "time"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "next"
features = ["driver", "gateway", "twilight", "rustls"]
default-features = false

# Enable link time optimizations to full for releases
[profile.release]
lto = true

# Enable incremental builds only on dev profile
[profile.dev]
incremental = true

# Compile dependencies only as release profile
[profile.dev.package."*"]
opt-level = 3